changes week 1