@@ -1,11 +1,10 @@
 package com.showroom.serviceImpl;
 
-import java.util.ArrayList;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import com.showroom.constants.UserType;
 import com.showroom.entity.Cart;
+import com.showroom.exception.EmailDuplicationException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -18,10 +17,10 @@ import com.showroom.entity.Response;
 import com.showroom.repository.CustomerRepository;
 import com.showroom.service.CustomerService;
 
-import jakarta.transaction.Transactional;
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.transaction.annotation.Transactional;
 
 @Slf4j
 @Service
@@ -30,43 +29,57 @@ public class CustomerServiceImpl implements CustomerService {
     @Autowired
     CustomerRepository customerRepository;
 
-    @Transactional
+    //    @Transactional( noRollbackFor = SQLIntegrityConstraintViolationException.class)
     @Override
     public Response createCustomer(Customer customer) {
         Response response = new Response();
 
         try {
+            // check if email is already present
+            Optional<Customer> existingEmail = customerRepository.findByEmail(customer.getEmail());
+            if (existingEmail.isPresent()) {
+                throw new EmailDuplicationException("Email already present");
+            }
+
+            // check if customer already present
             Optional<Customer> existingCustomer = customerRepository.findByFirstNameAndLastNameAndPhoneNo(
                     customer.getFirstName(), customer.getLastName(), customer.getPhoneNo());
             if (existingCustomer.isPresent()) {
                 response.getErrMssg().add("User already exist by given details");
             } else {
+                // set cart
                 Cart cart = new Cart();
                 cart.setCustomer(customer);
                 customer.setCart(cart);
-
+                // save customer
                 Customer savedCustomer = customerRepository.save(customer);
                 response.setResponseData(savedCustomer);
                 response.setSuccess(true);
             }
+        } catch (ConstraintViolationException e) {  // if constraint voilated
+            response.getErrMssg().addAll(e.getConstraintViolations().stream().map(ConstraintViolation::getMessage).toList());
+        } catch (EmailDuplicationException e) { // email duplicated
+            response.getErrMssg().add(e.getMessage());
         } catch (Exception e) {
             response.getErrMssg().add("User not added");
-            if (e.getCause().getCause() instanceof ConstraintViolationException cv) {
-                response.getErrMssg().addAll(cv.getConstraintViolations().stream().map(ConstraintViolation::getMessage)
-                        .collect(Collectors.toList()));
-            } else {
-                log.error("Error in createCustomer {}", e);
-            }
+            log.error("Error in createCustomer {}", e);
         }
         return response;
     }
 
-    @Transactional
-    @Override
+    //        @Transactional
+//    @Override
     public Response updateCustomer(Customer customer) {
         Response response = new Response();
         try {
-            // check if exist
+
+            // check if email is already present
+            Optional<Customer> existingMail = customerRepository.findByEmail(customer.getEmail());
+            // if email is present and phone no. not equal to given customer phone no
+            if (existingMail.isPresent() && (!existingMail.get().getPhoneNo().equals(customer.getPhoneNo()))) {
+                throw new EmailDuplicationException("Email already present");
+            }
+            // check if customer exist
             Optional<Customer> existingCustomer = customerRepository.findById(customer.getId());
             // if exist
             if (existingCustomer.isPresent()) {
@@ -78,13 +91,15 @@ public class CustomerServiceImpl implements CustomerService {
             } else {
                 response.getErrMssg().add("Customer does not exist");
             }
+        } catch (EmailDuplicationException e) { // email duplicated
+            response.getErrMssg().add(e.getMessage());
         } catch (Exception e) {
-            response.getErrMssg().add("Customer not added");
             if (e.getCause().getCause() instanceof ConstraintViolationException cv) {
                 response.getErrMssg().addAll(cv.getConstraintViolations().stream().map(ConstraintViolation::getMessage)
-                        .collect(Collectors.toList()));
+                        .toList());
             } else {
-                log.error("Error in createCustomer {}", e);
+                response.getErrMssg().add("Customer not updated");
+                log.error("Error in updateCustomer {}", e);
             }
         }
         return response;
@@ -94,9 +109,8 @@ public class CustomerServiceImpl implements CustomerService {
     public Response getCustomerById(int id) {
         Response response = new Response();
         try {
-            // check if exist
+            // check if customer exist
             Optional<Customer> existingCustomer = customerRepository.findById(id);
-            System.out.println(existingCustomer);
             // if exist
             if (existingCustomer.isPresent()) {
                 response.setResponseData(existingCustomer);
@@ -115,7 +129,7 @@ public class CustomerServiceImpl implements CustomerService {
     public Response getCustomerByFirstNameAndLastNameAndPhoneNo(String firstName, String lastName, String phoneNo) {
         Response response = new Response();
         try {
-            // check if exist
+            // check if customer exist
             Optional<Customer> existingCustomer = customerRepository.findByFirstNameAndLastNameAndPhoneNo(firstName,
                     lastName, phoneNo);
             // if exist
@@ -136,7 +150,7 @@ public class CustomerServiceImpl implements CustomerService {
     public Response deleteCustomerById(int id) {
         Response response = new Response();
         try {
-            // check if exist
+            // check if customer exist
             boolean doesCustomerExist = customerRepository.existsById(id);
             // if exist
             if (doesCustomerExist) {
@@ -147,23 +161,29 @@ public class CustomerServiceImpl implements CustomerService {
                 response.getErrMssg().add("User does not exist by Id : " + id);
             }
         } catch (Exception e) {
-            response.getErrMssg().add("User not found");
+            response.getErrMssg().add("User not deleted");
             log.error("Error in deleteCustomerById {}", e);
         }
         return response;
     }
 
     @Override
-    public Response getAllCustomers(String sortBy, String sortDirection, String filterValue,  int pageNo, int pageSize) {
+    public Response getAllCustomers(String sortBy, String sortDirection, String filterValue, int pageNo,
+                                    int pageSize) {
         Response response = new Response();
         try {
+            // create a page with page no., page size, sort(direction,column)
             Pageable page = PageRequest.of(pageNo, pageSize,
                     Sort.by(sortDirection.equals("DESC") ? Sort.Direction.DESC : Sort.Direction.ASC, sortBy));
-            Page<Customer> customerPage = customerRepository.findAllByUserType(UserType.CUSTOMER,page);
-            if (filterValue.length()>0 ) {
+
+
+            Page<Customer> customerPage = customerRepository.findAllByUserType(UserType.CUSTOMER, page);
+            // if filter value given than check in the given columns
+            if (filterValue.length() > 0) {
                 customerPage = customerRepository.findAllByFirstNameLikeOrLastNameLikeOrEmailLikeOrPhoneNoOrAddressLikeAndUserType(
                         filterValue, filterValue, filterValue, filterValue, filterValue, UserType.CUSTOMER, page);
             }
+            // if customers are present
             if (customerPage.getTotalElements() > 0) {
                 response.setResponseData(customerPage);
                 response.setSuccess(true);
@@ -182,7 +202,7 @@ public class CustomerServiceImpl implements CustomerService {
     public Response logIn(String name, String password) {
         Response response = new Response();
         try {
-            // check if exist
+            // check if customer exist
             Optional<Customer> customer = customerRepository.findByFirstNameAndPassword(name, password);
             // if exist
             if (customer.isPresent()) {
